# people_manager

./: README.md
backend/: .gitignore  database.sql  pyproject.toml
backend/app/: main.py
backend/app/configs/: base.py  database.py  settings.py
backend/app/controllers/: person_controller.py
backend/app/model/: person_model.py
backend/app/routers/: __init__.py  person_router.py
backend/app/schemas/: person_schema.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: index.css  main.tsx
frontend/src/api/: index.tsx
frontend/src/pages/CreatePerson/: index.tsx  style.css
frontend/src/pages/EditPerson/: index.tsx  style.css
frontend/src/pages/Home/: index.tsx  style.css
frontend/src/pages/Person/: index.tsx  style.css
frontend/src/routes/: index.tsx
frontend/src/types/: IPerson.d.ts
