[tool.poetry]
name = "people_manager"
version = "0.1.0"
description = ""
authors = ["matheusburey <matheushburei.99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.20"
psycopg2-binary = "^2.9.7"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
